@@ -37,7 +37,7 @@
             this.btnOK = new System.Windows.Forms.Button();
             this.btnCancel = new System.Windows.Forms.Button();
             this.label3 = new System.Windows.Forms.Label();
-            this.txtSave = new System.Windows.Forms.TextBox();
+            this.txtFilenameFormat = new System.Windows.Forms.TextBox();
             this.label4 = new System.Windows.Forms.Label();
             this.txtPage = new System.Windows.Forms.TextBox();
             this.label5 = new System.Windows.Forms.Label();
@@ -49,32 +49,36 @@
             // label1
             // 
             this.label1.AutoSize = true;
-            this.label1.Location = new System.Drawing.Point(12, 15);
+            this.label1.Location = new System.Drawing.Point(16, 18);
+            this.label1.Margin = new System.Windows.Forms.Padding(4, 0, 4, 0);
             this.label1.Name = "label1";
-            this.label1.Size = new System.Drawing.Size(57, 13);
+            this.label1.Size = new System.Drawing.Size(76, 17);
             this.label1.TabIndex = 0;
             this.label1.Text = "Tag Query";
             // 
             // txtTagQuery
             // 
-            this.txtTagQuery.Location = new System.Drawing.Point(82, 12);
+            this.txtTagQuery.Location = new System.Drawing.Point(109, 15);
+            this.txtTagQuery.Margin = new System.Windows.Forms.Padding(4, 4, 4, 4);
             this.txtTagQuery.Name = "txtTagQuery";
-            this.txtTagQuery.Size = new System.Drawing.Size(414, 20);
+            this.txtTagQuery.Size = new System.Drawing.Size(551, 22);
             this.txtTagQuery.TabIndex = 1;
             // 
             // txtLimit
             // 
-            this.txtLimit.Location = new System.Drawing.Point(82, 38);
+            this.txtLimit.Location = new System.Drawing.Point(109, 47);
+            this.txtLimit.Margin = new System.Windows.Forms.Padding(4, 4, 4, 4);
             this.txtLimit.Name = "txtLimit";
-            this.txtLimit.Size = new System.Drawing.Size(75, 20);
+            this.txtLimit.Size = new System.Drawing.Size(99, 22);
             this.txtLimit.TabIndex = 3;
             // 
             // label2
             // 
             this.label2.AutoSize = true;
-            this.label2.Location = new System.Drawing.Point(12, 41);
+            this.label2.Location = new System.Drawing.Point(16, 50);
+            this.label2.Margin = new System.Windows.Forms.Padding(4, 0, 4, 0);
             this.label2.Name = "label2";
-            this.label2.Size = new System.Drawing.Size(28, 13);
+            this.label2.Size = new System.Drawing.Size(37, 17);
             this.label2.TabIndex = 2;
             this.label2.Text = "Limit";
             // 
@@ -85,17 +89,19 @@
             | System.Windows.Forms.AnchorStyles.Right)));
             this.pnlProvider.AutoScroll = true;
             this.pnlProvider.AutoSize = true;
-            this.pnlProvider.Location = new System.Drawing.Point(82, 64);
+            this.pnlProvider.Location = new System.Drawing.Point(109, 79);
+            this.pnlProvider.Margin = new System.Windows.Forms.Padding(4, 4, 4, 4);
             this.pnlProvider.Name = "pnlProvider";
-            this.pnlProvider.Size = new System.Drawing.Size(600, 90);
+            this.pnlProvider.Size = new System.Drawing.Size(800, 111);
             this.pnlProvider.TabIndex = 4;
             this.pnlProvider.ControlAdded += new System.Windows.Forms.ControlEventHandler(this.pnlProvider_ControlAdded);
             // 
             // btnSelectAll
             // 
-            this.btnSelectAll.Location = new System.Drawing.Point(12, 84);
+            this.btnSelectAll.Location = new System.Drawing.Point(16, 103);
+            this.btnSelectAll.Margin = new System.Windows.Forms.Padding(4, 4, 4, 4);
             this.btnSelectAll.Name = "btnSelectAll";
-            this.btnSelectAll.Size = new System.Drawing.Size(64, 70);
+            this.btnSelectAll.Size = new System.Drawing.Size(85, 86);
             this.btnSelectAll.TabIndex = 0;
             this.btnSelectAll.Text = "Select All";
             this.btnSelectAll.UseVisualStyleBackColor = true;
@@ -104,9 +110,10 @@
             // btnOK
             // 
             this.btnOK.Anchor = ((System.Windows.Forms.AnchorStyles)((System.Windows.Forms.AnchorStyles.Bottom | System.Windows.Forms.AnchorStyles.Right)));
-            this.btnOK.Location = new System.Drawing.Point(608, 190);
+            this.btnOK.Location = new System.Drawing.Point(811, 234);
+            this.btnOK.Margin = new System.Windows.Forms.Padding(4, 4, 4, 4);
             this.btnOK.Name = "btnOK";
-            this.btnOK.Size = new System.Drawing.Size(75, 23);
+            this.btnOK.Size = new System.Drawing.Size(100, 28);
             this.btnOK.TabIndex = 5;
             this.btnOK.Text = "OK";
             this.btnOK.UseVisualStyleBackColor = true;
@@ -115,9 +122,10 @@
             // btnCancel
             // 
             this.btnCancel.Anchor = ((System.Windows.Forms.AnchorStyles)((System.Windows.Forms.AnchorStyles.Bottom | System.Windows.Forms.AnchorStyles.Right)));
-            this.btnCancel.Location = new System.Drawing.Point(527, 190);
+            this.btnCancel.Location = new System.Drawing.Point(703, 234);
+            this.btnCancel.Margin = new System.Windows.Forms.Padding(4, 4, 4, 4);
             this.btnCancel.Name = "btnCancel";
-            this.btnCancel.Size = new System.Drawing.Size(75, 23);
+            this.btnCancel.Size = new System.Drawing.Size(100, 28);
             this.btnCancel.TabIndex = 6;
             this.btnCancel.Text = "Cancel";
             this.btnCancel.UseVisualStyleBackColor = true;
@@ -126,55 +134,61 @@
             // label3
             // 
             this.label3.AutoSize = true;
-            this.label3.Location = new System.Drawing.Point(12, 68);
+            this.label3.Location = new System.Drawing.Point(16, 84);
+            this.label3.Margin = new System.Windows.Forms.Padding(4, 0, 4, 0);
             this.label3.Name = "label3";
-            this.label3.Size = new System.Drawing.Size(45, 13);
+            this.label3.Size = new System.Drawing.Size(60, 17);
             this.label3.TabIndex = 7;
             this.label3.Text = "provider";
             // 
-            // txtSave
+            // txtFilenameFormat
             // 
-            this.txtSave.Anchor = ((System.Windows.Forms.AnchorStyles)(((System.Windows.Forms.AnchorStyles.Bottom | System.Windows.Forms.AnchorStyles.Left) 
+            this.txtFilenameFormat.Anchor = ((System.Windows.Forms.AnchorStyles)(((System.Windows.Forms.AnchorStyles.Bottom | System.Windows.Forms.AnchorStyles.Left) 
             | System.Windows.Forms.AnchorStyles.Right)));
-            this.txtSave.DataBindings.Add(new System.Windows.Forms.Binding("Text", global::DanbooruDownloader3.Properties.Settings.Default, "filenameFormat", true, System.Windows.Forms.DataSourceUpdateMode.OnPropertyChanged));
-            this.txtSave.Location = new System.Drawing.Point(83, 164);
-            this.txtSave.Name = "txtSave";
-            this.txtSave.Size = new System.Drawing.Size(600, 20);
-            this.txtSave.TabIndex = 9;
-            this.txtSave.Text = global::DanbooruDownloader3.Properties.Settings.Default.filenameFormat;
+            this.txtFilenameFormat.DataBindings.Add(new System.Windows.Forms.Binding("Text", global::DanbooruDownloader3.Properties.Settings.Default, "filenameFormat", true, System.Windows.Forms.DataSourceUpdateMode.OnPropertyChanged));
+            this.txtFilenameFormat.Location = new System.Drawing.Point(137, 202);
+            this.txtFilenameFormat.Margin = new System.Windows.Forms.Padding(4, 4, 4, 4);
+            this.txtFilenameFormat.Name = "txtFilenameFormat";
+            this.txtFilenameFormat.Size = new System.Drawing.Size(773, 22);
+            this.txtFilenameFormat.TabIndex = 9;
+            this.txtFilenameFormat.Text = global::DanbooruDownloader3.Properties.Settings.Default.filenameFormat;
             // 
             // label4
             // 
             this.label4.Anchor = ((System.Windows.Forms.AnchorStyles)((System.Windows.Forms.AnchorStyles.Bottom | System.Windows.Forms.AnchorStyles.Left)));
             this.label4.AutoSize = true;
-            this.label4.Location = new System.Drawing.Point(12, 167);
+            this.label4.Location = new System.Drawing.Point(16, 205);
+            this.label4.Margin = new System.Windows.Forms.Padding(4, 0, 4, 0);
             this.label4.Name = "label4";
-            this.label4.Size = new System.Drawing.Size(64, 13);
+            this.label4.Size = new System.Drawing.Size(113, 17);
             this.label4.TabIndex = 8;
-            this.label4.Text = "Save Folder";
+            this.label4.Text = "Filename Format";
             // 
             // txtPage
             // 
-            this.txtPage.Location = new System.Drawing.Point(226, 38);
+            this.txtPage.Location = new System.Drawing.Point(301, 47);
+            this.txtPage.Margin = new System.Windows.Forms.Padding(4, 4, 4, 4);
             this.txtPage.Name = "txtPage";
-            this.txtPage.Size = new System.Drawing.Size(75, 20);
+            this.txtPage.Size = new System.Drawing.Size(99, 22);
             this.txtPage.TabIndex = 11;
             // 
             // label5
             // 
             this.label5.AutoSize = true;
-            this.label5.Location = new System.Drawing.Point(163, 41);
+            this.label5.Location = new System.Drawing.Point(217, 50);
+            this.label5.Margin = new System.Windows.Forms.Padding(4, 0, 4, 0);
             this.label5.Name = "label5";
-            this.label5.Size = new System.Drawing.Size(57, 13);
+            this.label5.Size = new System.Drawing.Size(75, 17);
             this.label5.TabIndex = 10;
             this.label5.Text = "Start Page";
             // 
             // chkNotRating
             // 
             this.chkNotRating.AutoSize = true;
-            this.chkNotRating.Location = new System.Drawing.Point(453, 40);
+            this.chkNotRating.Location = new System.Drawing.Point(604, 49);
+            this.chkNotRating.Margin = new System.Windows.Forms.Padding(4, 4, 4, 4);
             this.chkNotRating.Name = "chkNotRating";
-            this.chkNotRating.Size = new System.Drawing.Size(43, 17);
+            this.chkNotRating.Size = new System.Drawing.Size(52, 21);
             this.chkNotRating.TabIndex = 19;
             this.chkNotRating.Text = "Not";
             this.chkNotRating.UseVisualStyleBackColor = true;
@@ -182,32 +196,34 @@
             // cbxRating
             // 
             this.cbxRating.FormattingEnabled = true;
-            this.cbxRating.Location = new System.Drawing.Point(351, 38);
+            this.cbxRating.Location = new System.Drawing.Point(468, 47);
+            this.cbxRating.Margin = new System.Windows.Forms.Padding(4, 4, 4, 4);
             this.cbxRating.Name = "cbxRating";
-            this.cbxRating.Size = new System.Drawing.Size(96, 21);
+            this.cbxRating.Size = new System.Drawing.Size(127, 24);
             this.cbxRating.TabIndex = 18;
             // 
             // label7
             // 
             this.label7.AutoSize = true;
-            this.label7.Location = new System.Drawing.Point(307, 41);
+            this.label7.Location = new System.Drawing.Point(409, 50);
+            this.label7.Margin = new System.Windows.Forms.Padding(4, 0, 4, 0);
             this.label7.Name = "label7";
-            this.label7.Size = new System.Drawing.Size(38, 13);
+            this.label7.Size = new System.Drawing.Size(49, 17);
             this.label7.TabIndex = 17;
             this.label7.Text = "Rating";
             // 
             // FormAddBatchJob
             // 
-            this.AutoScaleDimensions = new System.Drawing.SizeF(6F, 13F);
+            this.AutoScaleDimensions = new System.Drawing.SizeF(8F, 16F);
             this.AutoScaleMode = System.Windows.Forms.AutoScaleMode.Font;
-            this.ClientSize = new System.Drawing.Size(695, 225);
+            this.ClientSize = new System.Drawing.Size(927, 277);
             this.Controls.Add(this.btnSelectAll);
             this.Controls.Add(this.chkNotRating);
             this.Controls.Add(this.cbxRating);
             this.Controls.Add(this.label7);
             this.Controls.Add(this.txtPage);
             this.Controls.Add(this.label5);
-            this.Controls.Add(this.txtSave);
+            this.Controls.Add(this.txtFilenameFormat);
             this.Controls.Add(this.label4);
             this.Controls.Add(this.label3);
             this.Controls.Add(this.btnCancel);
@@ -217,6 +233,7 @@
             this.Controls.Add(this.label2);
             this.Controls.Add(this.txtTagQuery);
             this.Controls.Add(this.label1);
+            this.Margin = new System.Windows.Forms.Padding(4, 4, 4, 4);
             this.Name = "FormAddBatchJob";
             this.StartPosition = System.Windows.Forms.FormStartPosition.CenterParent;
             this.Text = "FormAddBatchJob";
@@ -236,7 +253,7 @@
         private System.Windows.Forms.Button btnOK;
         private System.Windows.Forms.Button btnCancel;
         private System.Windows.Forms.Label label3;
-        private System.Windows.Forms.TextBox txtSave;
+        private System.Windows.Forms.TextBox txtFilenameFormat;
         private System.Windows.Forms.Label label4;
         private System.Windows.Forms.TextBox txtPage;
         private System.Windows.Forms.Label label5;
